--- a/src/GUI/ModManager/Styling/DefaultStyles.axaml
+++ b/src/GUI/ModManager/Styling/DefaultStyles.axaml
@@ -1,11 +1,11 @@
 ﻿<Styles xmlns="https://github.com/avaloniaui"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:controls="using:ModManager.Controls"
-	xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
-	xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-	xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
-	xmlns:rxui="using:Avalonia.ReactiveUI"
-	xmlns:suki="using:SukiUI.Controls">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:ModManager.Controls"
+    xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
+    xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
+    xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
+    xmlns:rxui="using:Avalonia.ReactiveUI"
+    xmlns:suki="using:SukiUI.Controls">
 
 	<Style Selector="Button.icon">
 		<Setter Property="Padding" Value="0" />
@@ -53,13 +53,22 @@
 	<Style Selector="TextBlock.left">
 		<Setter Property="Padding" Value="0" />
 		<Setter Property="Margin" Value="0,0,8,8" />
-		<Setter Property="Background" Value="Transparent" />
 		<Setter Property="VerticalAlignment" Value="Top" />
 		<Setter Property="HorizontalAlignment" Value="Stretch" />
 		<Setter Property="TextAlignment" Value="Left" />
+		<Setter Property="Background" Value="Transparent" />
 	</Style>
 
 	<Style Selector="TextBlock.right">
+		<Setter Property="Padding" Value="0" />
+		<Setter Property="Margin" Value="0,0,0,8" />
+		<Setter Property="Background" Value="Transparent" />
+		<Setter Property="VerticalAlignment" Value="Top" />
+		<Setter Property="HorizontalAlignment" Value="Left" />
+		<Setter Property="TextAlignment" Value="Left" />
+	</Style>
+
+	<Style Selector="NumericUpDown.right">
 		<Setter Property="Padding" Value="0" />
 		<Setter Property="Margin" Value="0,0,0,8" />
 		<Setter Property="Background" Value="Transparent" />
