Implement about/nxm windows, add hyperlink control

--- a/src/GUI/ModManager/App.axaml
+++ b/src/GUI/ModManager/App.axaml
@@ -18,6 +18,7 @@
 				<ResourceInclude Source="avares://ModManager/Styling/Controls/FilterButtonExpander.axaml" />
 				<!--<ResourceInclude Source="avares://ModManager/Styling/Controls/TimePickerFix.axaml" />-->
 				<ResourceInclude Source="avares://ModManager/Styling/Controls/TimeSpanUpDown.axaml" />
+				<ResourceInclude Source="avares://ModManager/Styling/Controls/Hyperlink.axaml" />
 			</ResourceDictionary.MergedDictionaries>
 
 			<!--  TreeDataGrid Resources  -->
