Add icons for context menu copy/etc

--- a/src/GUI/ModManager/Styling/DefaultStyles.axaml
+++ b/src/GUI/ModManager/Styling/DefaultStyles.axaml
@@ -127,4 +127,8 @@
 			</Setter>
 		</Style>
 	</Style>
+
+	<!--<Style Selector="MenuItem /template/ TextBlock#PART_InputGestureText">
+		<Setter Property="FontSize" Value="8" />
+	</Style>-->
 </Styles>
